--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/kmyl159/NomeNinja#readme",
   "dependencies": {
     "next": "^12.1.6",
+    "next-images": "^1.8.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "styled-components": "^5.3.5"
